# bcvk

./: .bootc-dev-infra-commit.txt  .gitignore  .packit.yaml  AGENTS.md  Justfile  REVIEW.md  renovate.json
.github/workflows/: bcvk-ci_test.yml  ci_test.yml  docs.yml  main.yml  release.yml  scheduled-release.yml
crates/bcvk-qemu/src/: lib.rs  qemu.rs  swtpm.rs  swu2f.rs  usb_passthrough.rs  virtiofsd.rs
crates/integration-tests/fixtures/: Dockerfile.luks2-fido2-e2e  Dockerfile.uki-only
crates/integration-tests/src/: main.rs
crates/integration-tests/src/tests/: libvirt_ignition.rs  libvirt_verb.rs  luks2_fido2_e2e.rs  run_ephemeral.rs
crates/kit/: Cargo.toml
crates/kit/scripts/: entrypoint.sh
crates/kit/src/: cpio.rs  domain_list.rs  lib.rs  main.rs  native_to_disk.rs  run_ephemeral.rs  ssh.rs  ssh_options.rs
crates/kit/src/libvirt/: domain.rs  mod.rs  run.rs  ssh.rs
crates/kit/src/units/: bcvk-copy-units.service  bcvk-journal-stream-initrd.service  bcvk-journal-stream.service  sysroot.mount
docs/: swtpm-tpm2.md  swtpm.md  swu2f.md  yubikey-passthrough.md
docs/src/: quick-start.md
docs/src/man/: bcvk-ephemeral-run-ssh.md  bcvk-ephemeral-run.md  bcvk-libvirt-run.md  bcvk-to-disk.md
